<resources>
    <string name="app_name">saweMLia</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="doesnt_have_account">Doesn\'t Have Account ? Sign Up Here !</string>
    <string name="already_have_account">Already have an account ? Sign in Here !</string>
    <string name="welcome_message">Welcome, user</string>
</resources>