<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta_stencil"

            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/orange_500"

            android:textSize="55sp"

            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/usernameET"
        android:hint="@string/username"
        />
    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/usernameET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/passwordET"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/sign_up"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="105dp"
        android:textAlignment="textEnd"
        android:text="@string/already_have_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        android:id="@+id/already_have_account"
        />


</androidx.constraintlayout.widget.ConstraintLayout>